# fluid-server

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  fluid-server.spec  pyproject.toml  test_embeddings.py  test_simple_vector_store.py  test_vector_store.py
.claude/: settings.local.json
.github/: README.md  dependabot.yml
.github/workflows/: main.yml  pr.yml  release.yml  test.yml  typecheck.yml
docs/: GGUF-model-support.md  README.md  compilation-guide.md  development.md  integration-guide.md  lancedb.md  npu-support.md  streaming-improvements.md
scripts/: build-arm64.ps1  build-x64.ps1  build.ps1  convert_audio.py  kill_server.bat  kill_server.ps1  start_server.ps1  test_exe.ps1  test_whisper.py  test_with_models.ps1  typecheck.ps1  typecheck.sh
src/fluid_server/: __init__.py  __main__.py  __version__.py  app.py  config.py
src/fluid_server/api/: health.py
src/fluid_server/api/v1/: audio.py  chat.py  embeddings.py  models.py  vector_store.py
src/fluid_server/managers/: embedding_manager.py  runtime_manager.py
src/fluid_server/models/: openai.py
src/fluid_server/runtimes/: base.py  base_embedding.py  chat_handlers.py  llamacpp_embedding.py  llamacpp_llm.py  openvino_embedding.py  openvino_llm.py  openvino_whisper.py  qnn_whisper.py  sentence_transformer_embedding.py  whisper_embedding.py
src/fluid_server/storage/: __init__.py  lancedb_client.py
src/fluid_server/utils/: model_discovery.py  model_downloader.py  platform_utils.py  retry.py
