[project]
name = "fluid-server"
version = "0.1.0"
description = "OpenAI-compatible API server with OpenVINO backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "openvino>=2025.2.0",
    "openvino-genai>=2025.2.0",
    "huggingface-hub>=0.20.0",
]

[tool.uv]
dev-dependencies = [
    "openai>=1.100.1",
    "pyinstaller>=6.0.0",
    "ty>=0.0.1a18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Entry point for the module
[project.scripts]
fluid-server = "fluid_server.__main__:main"

# Type checking with ty
[tool.ty]
# Include source directories
paths = ["src"]
# Strict mode for better type checking
strict = true
# Show error codes for easier debugging
show-error-codes = true
